test/integration/bad/profiling/profile-bad6.stan
functions {
    real profile(int i) {
        return i + 1.0;
    }
}